[package]
name = "rusty-sidekiq"
version = "0.13.2"
edition = "2021"
description = "A rust sidekiq server and client using tokio"
authors = ["Garrett Thornburg <garrett.thornburg@hey.com>"]
homepage = "https://github.com/film42/sidekiq-rs"
repository = "https://github.com/film42/sidekiq-rs.git"
keywords = ["sidekiq", "worker", "tokio", "ruby"]
license = "MIT"
readme = "README.md"

[lib]
name = "sidekiq"

[dependencies]
gethostname = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
redis = { version = "1.1", features = ["aio", "default", "tokio-comp"] }
async-trait = "0.1"
thiserror = "2"
bb8 = "0.9"
num_cpus = "1"
chrono = "0.4"
rand = "0.8"
hex = "0.4"
cron_clock = "0.8"
sha2 = "0.10"
convert_case = "0.11"

tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serial_test = "3"
